change color palette

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@
  * # custom block grid STACK breakpoints
  *
  * ------------------------------------------------------------------- */
-@media screen and (max-width: 1000px) {
+ @media screen and (max-width: 1000px) {
   .block-1000-full > .column {
     -webkit-flex: 0 0 100%;
     -ms-flex: 0 0 100%;
@@ -104,7 +104,7 @@ body {
 }
 
 body {
-  background: #dacfcf;
+  background: #121212;
   font-family: "Lora", serif;
   font-size: 2rem;
   font-style: normal;
@@ -254,7 +254,7 @@ p img {
 p.lead {
   font-family: "Lora", serif;
   font-weight: 500;
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   line-height: 1.857;
   margin-bottom: 3.6rem;
   color: #000000;
@@ -1597,7 +1597,7 @@ input::-moz-focus-inner {
   line-height: 1.5;
   text-transform: uppercase;
   letter-spacing: 0.3rem;
-  color: #fd0000;
+  color: #fb8b23;
   margin-top: 0;
   margin-bottom: 0.4rem;
   margin-left: 4px;
@@ -1794,7 +1794,6 @@ input::-moz-focus-inner {
   position: absolute;
   top: 2.8rem;
   left: 0;
-  background-color: transparent;
 }
 
 /* -------------------------------------------------------------------
@@ -2050,26 +2049,23 @@ input::-moz-focus-inner {
 .s-hero {
   width: 100%;
   height: 100vh;
-  min-height: 82rem;
+  min-height: 70rem;
   overflow: hidden;
   background-color: transparent;
-  position: relative;
-  /* top: 12rem; */
   background-image: url("https://res.cloudinary.com/dharme/image/upload/v1666959065/IMG_5705_1_2_1_k10ffv.png");
   background-size: cover;
-  /* background-position-y: 10rem; */
-  background-repeat: no-repeat;
+  position: relative;
 }
 
 .s-hero::before {
   display: block;
   content: "";
   position: absolute;
-  top: -10;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #3b3939;
+  background-color: #050505;
   opacity: 0.7;
 }
 
@@ -2083,7 +2079,7 @@ input::-moz-focus-inner {
 .hero-left-bar {
   height: 100%;
   width: 8rem;
-  background-color: #083746;
+  background-color: #000000;
   opacity: 0.9;
   position: absolute;
   top: 0;
@@ -2501,12 +2497,12 @@ html.no-csstransitions .hero-content {
 .s-about {
   padding-top: 19.6rem;
   padding-bottom: 19.6rem;
-  background-color: #043746;
+  background-color: #3b0d11;
   color: rgba(255, 255, 255, 0.8);
 }
 
 .s-about .subhead {
-  color: #fd0000;
+  color: #fb8b23;
   margin-bottom: 4rem;
 }
 
@@ -2703,7 +2699,7 @@ html.no-csstransitions .hero-content {
 }
 
 .s-events .subhead {
-  color: #fd0000;
+  color: #fb8b23;
 }
 
 .events-header {
@@ -2945,6 +2941,43 @@ html.no-csstransitions .hero-content {
   }
 }
 
+/* Gallery */
+.gallery {
+  background-color: #ffffff;
+  padding: 0.5rem 0rem 8rem 0rem;
+}
+.gallery-header {
+  text-align: center;
+  padding-bottom: 2rem;
+}
+.gallery-img-container {
+  display: grid;
+grid-template-columns: repeat(4, 1fr);
+grid-template-rows: repeat(3, 1fr);
+/* grid-column-gap: 10px; */
+grid-row-gap: 10px;
+  justify-items: center;
+}
+
+.gallery img {
+  width: 80%;
+}
+.gallery p {
+  text-align: end;
+  /* margin-left: -10rem; */
+}
+
+@media screen and (max-width: 600px) {
+  .gallery-img-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+}
+/* end of gallery */
+
 /* ===================================================================
  * # social  
  *
@@ -2952,7 +2985,7 @@ html.no-csstransitions .hero-content {
 .s-social {
   padding-top: 10.4rem;
   padding-bottom: 9.6rem;
-  background-color: #000;
+  background-color: #000000;
 }
 
 .social-content {
@@ -2978,7 +3011,7 @@ html.no-csstransitions .hero-content {
 }
 
 .social-list a {
-  color: #fff;
+  color: #ffffff;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -2995,7 +3028,7 @@ html.no-csstransitions .hero-content {
   width: 4.8rem;
   height: 4.8rem;
   border-radius: 50%;
-  border: 1px solid #cf5050;
+  border: 1px solid #ffffff;
   margin-right: 2rem;
   position: relative;
 }
@@ -3017,7 +3050,6 @@ html.no-csstransitions .hero-content {
 
 .social-list__icon--facebook::before {
   background-image: url(../images/icons/social/icon-facebook.svg);
-  color: #000;
 }
 
 .social-list__icon--twitter::before {
@@ -3088,233 +3120,6 @@ html.no-csstransitions .hero-content {
     width: 1.6rem;
   }
 }
-/* ===================================================================
- * # gallery
- 
- /* 3D Slideshow */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-/* html, body {
-	max-width: 100%;
-	overflow-x: hidden;
-	overflow-y: hidden;
-	background-color: #6adecd;
-} */
-
-
-#slideshow {
-  /* margin: 0 auto; */
-  padding-top: 2rem;
-  height: 400px;
-  width: 100%;
-  background-color: #fff;
-  box-sizing: border-box;
-}
-
-.slideshow-title {
-  font-family: "Allerta Stencil";
-  font-size: 62px;
-  color: #fff;
-  margin: 0 auto;
-  text-align: center;
-  margin-top: 25%;
-  letter-spacing: 3px;
-  font-weight: 300;
-}
-
-.sub-heading {
-  padding-top: 50px;
-  font-size: 18px;
-}
-.sub-heading-two {
-  font-size: 15px;
-}
-.sub-heading-three {
-  font-size: 13px;
-}
-.sub-heading-four {
-  font-size: 11px;
-}
-.sub-heading-five {
-  font-size: 9px;
-}
-.sub-heading-six {
-  font-size: 7px;
-}
-.sub-heading-seven {
-  font-size: 5px;
-}
-.sub-heading-eight {
-  font-size: 3px;
-}
-.sub-heading-nine {
-  font-size: 1px;
-}
-
-.entire-content {
-  margin: auto;
-  width: 190px;
-  perspective: 1000px;
-  position: relative;
-  padding-top: 80px;
-}
-
-.content-carrousel {
-  width: 100%;
-  position: absolute;
-  float: right;
-  animation: rotar 15s infinite linear;
-  transform-style: preserve-3d;
-}
-
-.content-carrousel:hover {
-  animation-play-state: paused;
-  cursor: pointer;
-}
-
-.content-carrousel figure {
-  width: 100%;
-  height: 120px;
-  border: 1px solid #3b444b;
-  overflow: hidden;
-  position: absolute;
-}
-
-.content-carrousel figure:nth-child(1) {
-  transform: rotateY(0deg) translateZ(300px);
-}
-.content-carrousel figure:nth-child(2) {
-  transform: rotateY(40deg) translateZ(300px);
-}
-.content-carrousel figure:nth-child(3) {
-  transform: rotateY(80deg) translateZ(300px);
-}
-.content-carrousel figure:nth-child(4) {
-  transform: rotateY(120deg) translateZ(300px);
-}
-.content-carrousel figure:nth-child(5) {
-  transform: rotateY(160deg) translateZ(300px);
-}
-.content-carrousel figure:nth-child(6) {
-  transform: rotateY(200deg) translateZ(300px);
-}
-.content-carrousel figure:nth-child(7) {
-  transform: rotateY(240deg) translateZ(300px);
-}
-.content-carrousel figure:nth-child(8) {
-  transform: rotateY(280deg) translateZ(300px);
-}
-.content-carrousel figure:nth-child(9) {
-  transform: rotateY(320deg) translateZ(300px);
-}
-.content-carrousel figure:nth-child(10) {
-  transform: rotateY(360deg) translateZ(300px);
-}
-
-.shadow {
-  position: absolute;
-  box-shadow: 0px 0px 20px 0px #000;
-  border-radius: 1px;
-}
-
-.content-carrousel img {
-  image-rendering: auto;
-  transition: all 300ms;
-  width: 100%;
-  height: 100%;
-}
-
-.content-carrousel img:hover {
-  transform: scale(1.2);
-  transition: all 300ms;
-}
-
-@keyframes rotar {
-  from {
-    transform: rotateY(0deg);
-  }
-  to {
-    transform: rotateY(360deg);
-  }
-}
-
-@media screen and (max-width: 1400px) {
-}
-
-
-@media screen and (max-width: 800px) {
-  #slideshow {
-    display: none;
-  }
-}
-
-/* mobile slider  */
-@media screen and (min-width: 800px) {
-#slider{
-  display: none;
-}
-}
-
-@media screen and (max-width: 800px) {
-  #slider {
-    position: relative;
-    width: 100%;
-    height: auto;
-   background-color: #fff;
-    overflow: hidden;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
-    padding: 5rem 0;
-  }
-  #slider ul {
-    position: relative;
-    list-style: none;
-    height: 100%;
-    width: 10000%;
-    padding: 0;
-    margin: 0;
-    transition: all 750ms ease;
-    left: 0;
-  }
-  #slider ul li {
-    position: relative;
-    height: 100%;
-   
-    float: left;
-  }
-  #slider ul li img{
-    width: 500px;
-    height: 265px;
-  }
-   
-  #slider #prev, #slider #next {
-    width: 50px;
-    line-height: 50px;
-    border-radius: 50%;
-    font-size: 2rem;
-    text-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: all 150ms ease;
-  }
-  #slider #prev:hover, #slider #next:hover {
-    background-color: rgba(0, 0, 0, 0.5);
-    text-shadow: 0;
-  }
-  #slider #prev {
-    left: 10px;
-  }
-  #slider #next {
-    right: 10px;
-  }
-}
-
 
 /* ===================================================================
  * # footer 
@@ -3323,7 +3128,7 @@ html.no-csstransitions .hero-content {
 .s-footer {
   padding-top: 12rem;
   padding-bottom: 8rem;
-  background-color: #043746;
+  background-color: #3b0d11;
   font-family: "Open Sans", sans-serif;
   font-size: 1.7rem;
   line-height: 1.882;
@@ -3341,9 +3146,9 @@ html.no-csstransitions .hero-content {
 }
 
 .s-footer .btn--footer {
-  border-color: #fd0000;
-  background-color: #fd0000;
-  padding: 0 2rem;
+  border-color: #21070a;
+  background-color: #21070a;
+  padding: 0 4rem;
 }
 
 .s-footer .btn--footer:hover,
@@ -3400,13 +3205,11 @@ html.no-csstransitions .hero-content {
   margin-top: 4.8rem;
   padding-right: 80px;
   color: rgba(255, 255, 255, 0.3);
-  text-align: center;
 }
 
 .ss-copyright span {
   font-size: 15px;
   display: inline-block;
-  
 }
 
 .ss-copyright span::after {
