--- a/css/main.css
+++ b/css/main.css
@@ -2065,7 +2065,7 @@ input::-moz-focus-inner {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #050505;
+  background-color: #1b1b1b;
   opacity: 0.7;
 }
 
@@ -3270,7 +3270,7 @@ grid-row-gap: 10px;
 }
 
 .ss-go-top a:hover {
-  background-color: #037c82;
+  background-color: #441318;
   color: #ffffff;
 }
 
